# GUI-agent

./: .gitignore  README.md
OSWorld_server/: osworld_server.py
agent/: _start_agent.py  environment.yml  pyproject.toml
agent/agentz/: _agent.py  constants.py
agent/agentz/ACI/: __init__.py  _osworld_environment.py
agent/agentz/actuators/: __init__.py  _plan_executor.py
agent/agentz/judge/: __init__.py  _judge.py  _prompts.py
agent/agentz/memory/: __init__.py
agent/agentz/memory/core/: __init__.py  _history_manager.py
agent/agentz/memory/episodic/: __init__.py  _episodic_memory.py  _episodic_memory_retrivial.py
agent/agentz/memory/tms/: __init__.py  _anchors.py  _prompts.py  _tms_online.py  _trim.py
agent/agentz/memory/utils/: __init__.py  _formatters.py  _metrics.py  _signatures.py  _similarity.py
agent/agentz/perception/: __init__.py  _a11y_extractor.py  _omniparser.py  _perception_interface.py  _ui_fusion.py  _ui_schema.py
agent/agentz/planning/: __init__.py  _planner.py  _prompts.py
agent/agentz/pydantic_models/: __init__.py  _openai_api_models.py  _plan_models.py  _settings_models.py  _tms_models.py
agent/agentz/tools/: __init__.py  _tools_model.py
agent/agentz/tools/openai_api/: __init__.py  _gpt_client.py  _gpt_client_conversation.py  _gpt_interaction_logger.py
agent/agentz/tools/os_inspector/: __init__.py  _os_inspector.py
agent/agentz/utility/: __init__.py  _file_system_interaction.py  _logging.py  _output_presentation.py
agent/config_files/: start_agent.yaml  start_agent_nb.yaml
experiments/: experiments_final.csv  tasks.json  (+8 more)
(+32 files in other folders)
